[metadata]
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Software Development :: Testing
description = Common config for Sentry for Fuzzing tools
keywords = fuzz fuzzing security test testing
license = MPL 2.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = sentry-fuzzing-config
platforms = any
url = https://github.com/MozillaSecurity/sentry

[options]
install_requires =
    psutil
    sentry_sdk
package_dir =
    = src
packages =
    sentry_fuzzing_config
zip_safe = False
python_requires = >=3.9

[options.extras_require]
dev =
    pre-commit
    tox

[options.package_data]
sentry_fuzzing_config =
    py.typed
